--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '26.0.0'
+        xcode-version: 'latest'
     - name: Build
       run: xcodebuild -scheme navigation-flow build -destination "platform=iOS Simulator,name=iPhone 17 Pro Max,OS=latest" -derivedDataPath .build
     - name: Run tests
