--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,12 +16,15 @@ jobs:
     - uses: maxim-lobanov/setup-xcode@v1
       with:
         xcode-version: 'latest-stable'
-    - name: Build
-      run: xcodebuild -scheme navigation-flow build -destination "platform=iOS Simulator,name=iPhone 17 Pro Max,OS=latest" -derivedDataPath .build
+     - name: Build
+      run: swift build -v
     - name: Run tests
-      run: xcodebuild -scheme navigation-flow test -destination "platform=iOS Simulator,name=iPhone 17 Pro Max,OS=latest" -derivedDataPath .build -enableCodeCoverage YES
+      run: swift test -v --enable-code-coverage
+    - name: Convert code coverage
+      run: xcrun llvm-cov export -format="lcov" -instr-profile=$(find .build -name default.profdata) $(find .build -name '*.xctest')/Contents/MacOS/*PackageTests > info.lcov
     - name: Upload coverage reports
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v5
       with:
-        xcode: true
-        xcode_archive_path: ${{ env.RESULT_BUNDLE_PATH }}
+        fail_ci_if_error: true
+        token: ${{ secrets.CODECOV_TOKEN }}
+        verbose: true
